<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/copy" />

        <Button
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/stop" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#30C0FF" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/progress_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll"
        android:layout_below="@+id/ll"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="4"
            android:background="#BABABA"
            android:max="100" />

        <TextView
            android:id="@+id/progress_tv1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.3"
            android:textColor="#00FFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll2"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt"
            style="?android:attr/textColorPrimaryNoDisable"
            android:layout_width="135dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/hint" />

        <Button
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/setNumber" />

        <Button
            android:id="@+id/autoCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/autoCopy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll3" >

        <TextView
            android:id="@+id/tv_spendTime"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_dataTime"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_fileSize"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_copyVelocity"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/dataFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF" />
    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/open"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:background="@drawable/btn"
        android:onClick="onStart"
        android:text="@string/open" />

</RelativeLayout>
