<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ll2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
		
        <Button
            android:id="@+id/clean"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/wipeData" />
        
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn"
            android:onClick="onStart"
            android:text="@string/quit"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="#30C0FF" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />
            
            <LinearLayout 
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
            	android:orientation="horizontal">
                
             	<TextView
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
                	android:text="@string/rate"/>   
                
            	<TextView
            		android:id="@+id/tv_copyVelocity"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/progress_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textSize="12sp" />

            <LinearLayout 
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
            	android:orientation="horizontal">
                
             	<TextView
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
                	android:text="@string/finished"/>   
                
            	<TextView
                	android:id="@+id/textView"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:textSize="15sp" />
            </LinearLayout>
            
             <TextView
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="right|bottom"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/ll"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="4"
            android:background="#BABABA" />

        <TextView
            android:id="@+id/progress_tv1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.3"
            android:textColor="#00FFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ll1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginLeft="20dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:background="#ffffff"
            android:hint="@string/init" />
        
        <Button
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onStart"
            android:background="@drawable/btn"
            android:text="@string/times" 
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/autoCopy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onStart"
            android:background="@drawable/btn"
            android:text="@string/copyFile" 
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll3" >

        <TextView
            android:id="@+id/tv_spendTime"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_dataTime"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_fileSize"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/dataFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF" />
    </LinearLayout>

</RelativeLayout>
